minio/manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio.k.erushnikov.ru
      secretName: wildcard-k-erushnikov-ru
  rules:
    - host: "minio.k.erushnikov.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mi
                port:
                  name: console
